<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassicGameActivity">
    <TextView
        android:id="@+id/time"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:text="0:00"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <com.example.sudokugame.SudokuBoardView
        android:id="@+id/sudokuBoardView"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/time"
        android:layout_centerHorizontal="true" />

    <GridLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sudokuBoardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:columnCount="4"
        android:rowCount="3">


        <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_margin="1dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/_1" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="1dp"
            android:text="@string/_2" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:text="@string/_3" />

        <Button
            android:id="@+id/fourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="1dp"
            android:text="@string/_4" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="1dp"
            android:text="@string/_5" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_margin="1dp"
            android:text="@string/_6" />

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="1dp"
            android:text="@string/_7" />

        <Button
            android:id="@+id/eightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="1dp"
            android:text="@string/_8" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:text="@string/_9" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:background="@android:color/transparent"
            android:text="←"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:background="@android:color/transparent"
            android:text="@string/checkSymbol"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:background="@android:color/transparent"
            android:text="@string/finish"
            android:textColor="@color/black" />
    </GridLayout>

</RelativeLayout>